# toolbelt

./: .gitignore  README.md  setup.py
src_toolbelt/: create_project.py
src_toolbelt/template/: README.md  setup.cfg  setup.py
src_toolbelt/template/notebooks/: 00_main.ipynb
src_toolbelt/template/src/src_folder/: __init__.py  config.py  data_interactor.py  helper_functions.py  interfaces.py  main_functions.py  metrics.py  models.py  pipelines.py  plot_functions.py  protocols.py  splitters.py  transformers.py  utils.py
src_toolbelt/template/src/src_folder/interfaces/: config.py  data_interactor.py  model.py  pipeline_step.py  transformer.py
src_toolbelt/template/src/src_folder/models/: model_example.py
src_toolbelt/template/src/src_folder/pipelines/: data_cleaning.py  data_extracting.py  data_preprocessing.py  feature_engineering.py  splitting.py
src_toolbelt/template/src/src_folder/splitters/: splitter_example.py
src_toolbelt/template/src/src_folder/transformers/: cleaners.py  feature_engineers.py  preprocessors.py
src_toolbelt/template/src/src_folder/utils/: plot_functions.py
