[options]
python_requires = < 3.11

install_requires =
    pandas == 1.4.4
    numpy == 1.23.3
    psycopg2-binary == 2.9.3
    PyYAML == 6.0
    scikit-learn == 1.1.2
    googleAPI == 0.1.0
    matplotlib == 3.5.3
    python-dotenv == 0.21.0
    yapf == 0.32.0
    seaborn == 0.12.0
    ipywidgets == 8.0.2
    fsspec == 2022.8.2
    s3fs == 2022.8.2
    
include_package_data = True
packages = find_namespace:
package_dir == 
    = src

[options.packages.find]
where = src


